--- a/docs/team/eshwarkp.adoc
+++ b/docs/team/eshwarkp.adoc
@@ -121,6 +121,9 @@ https://github.com/AY1920S1-CS2103T-T11-3/main/pull/232[#232],
 https://github.com/AY1920S1-CS2103T-T11-3/main/pull/289[#289])
 
 == Contributions to the User Guide
+|===
+|_The original user guide has been updated to document the new capabilities of the AddMin+ functionality. The following are excerpts from the AddMin+ User Guide, which will showcase the sections that I have contributed to, in particular, the Statistics section of the UG. This will showcase my ability to write documentation for end-users._
+|===
 //tag::Statistics[]
 === Statistics
 
@@ -189,8 +192,51 @@ design code structure of the `generate_schedule` command. They showcase my abili
 and the technical depth of my contributions to the project._
 |===
 
-include::../DeveloperGuide.adoc[tag=generateschedule1]
-include::../DeveloperGuide.adoc[tag=generateschedule2]
+=== Statistics feature
+
+==== Implementation
+
+Given below is an example usage scenario and how the statistics mechanism behaves at each step.
+
+Step 1. The user launches the application for the first time and navigates to the statistics tab by either clicking the Statistics tab on the UI or `statistics` command.
+
+Step 2. Statistics are generated on-demand and displayed to the user based on the current data by either clicking the Generate Statistics button on the UI or `generate_stats` command.
+
+Step 3. Detailed Statistics are generated on-demand and displayed to the user based on the current data by either clicking the Generate Detailed Statistics button on the UI or `generate_stats_detail` command.
+
+Step 4. These commands execute in a flow starting from parsing the command via the AddressBookParser.
+
+==== Design Considerations
+
+===== Aspect: How statistics executes
+
+|===
+||**Alternative 1**|**Alternative 2**
+|**Consideration 1**: +
+Data Structure to support Generate Statistics Command.
+| **Processes the data and generates statistics upon `generate_stats` command. (Current choice)**: +
+
+_Pros:_ +
+Simpler implementation as storage management is not required as statistics are generated on-demand.
+
+_Cons:_ +
+App may have overall lower performance, with the possibility of lag as the app needs to read through all the stored data and generate the statistics data whenever it is queried.
+
+|**Generate statistics each time there is change in the data and store them.** +
+
+_Pros:_ +
+Statistical data will be displayed according to the data stored on the JSON file storage and user will not be required to perform any action to see the latest statistics at any point of time.  +
+
+_Cons:_ +
+ Requires managing the storage of the statistical data and possibly lead to lowered performance of other features such as the command which does CRUD to Employees/Events which will be slower with the need to generate the statistical data and store it in the JSON file storage.
+
+3+|**Why We chose Alternative 1:** +
+Alternative 1 makes more logical sense and will be more efficient as compared to Alternative 2. Alternative 1 requires less intermediate processing and storage units to support the feature.
+Processing is done on demand. Looking at the use case of the `generate_stats` command, it will be used by the user when they need an overview of the most current data regarding events and employees.
+
+|===
+
+// end::statistics[]
 
 == Conclusion:
 The AddMin+ project was created by the AddMin+ Team as part of a university module requirement. Through AddMin+, I was able
